chore: rename api case for request and response
