# apps/backend/internal/feature/tool/usecase/addtool.go
@@ -14,18 +14,18 @@ type AddToolUseCase struct {
 }
 
 type AddToolInput struct {
-	Name        string
-	Slug        string
-	Category    string
-	SubType     string
-	Prolang     *string
-	DevStatus   string
-	Details     *string
-	Website     *string
-	Github      *string
-	UseCases    []string
-	Tags        []string
-	ReleaseYear int
+	Name        string   `json:"name"`
+	Slug        string   `json:"slug"`
+	Category    string   `json:"category"`
+	SubType     string   `json:"subType"`
+	Prolang     *string  `json:"prolang,omitempty"`
+	DevStatus   string   `json:"devStatus"`
+	Details     *string  `json:"details,omitempty"`
+	Website     *string  `json:"website,omitempty"`
+	Github      *string  `json:"github,omitempty"`
+	UseCases    []string `json:"useCases"`
+	Tags        []string `json:"tags"`
+	ReleaseYear int      `json:"releaseYear"`
 }
 
 func (uc *AddToolUseCase) Execute(input AddToolInput) (domain.Tool, error) {
